; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/core/extr_rtw_efuse.c_Efuse_Write1ByteToFakeContent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/core/extr_rtw_efuse.c_Efuse_Write1ByteToFakeContent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }

@EFUSE_MAX_HW_SIZE = common dso_local global i64 0, align 8
@fakeEfuseBank = common dso_local global i32 0, align 4
@fakeEfuseContent = common dso_local global i8** null, align 8
@fakeBTEfuseContent = common dso_local global i8*** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Efuse_Write1ByteToFakeContent(%struct.adapter* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.adapter*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store %struct.adapter* %0, %struct.adapter** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @EFUSE_MAX_HW_SIZE, align 8
  %10 = icmp uge i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %31

12:                                               ; preds = %3
  %13 = load i32, i32* @fakeEfuseBank, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %12
  %16 = load i8*, i8** %7, align 8
  %17 = load i8**, i8*** @fakeEfuseContent, align 8
  %18 = load i64, i64* %6, align 8
  %19 = getelementptr inbounds i8*, i8** %17, i64 %18
  store i8* %16, i8** %19, align 8
  br label %30

20:                                               ; preds = %12
  %21 = load i8*, i8** %7, align 8
  %22 = load i8***, i8**** @fakeBTEfuseContent, align 8
  %23 = load i32, i32* @fakeEfuseBank, align 4
  %24 = sub nsw i32 %23, 1
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8**, i8*** %22, i64 %25
  %27 = load i8**, i8*** %26, align 8
  %28 = load i64, i64* %6, align 8
  %29 = getelementptr inbounds i8*, i8** %27, i64 %28
  store i8* %21, i8** %29, align 8
  br label %30

30:                                               ; preds = %20, %15
  store i32 1, i32* %4, align 4
  br label %31

31:                                               ; preds = %30, %11
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
